small changes to try to make it work

--- a/app/templates/confirm.html
+++ b/app/templates/confirm.html
@@ -68,7 +68,7 @@
     <br/>
     <center>
       {{ form.hidden_tag() }}
-      <input type = button name="zobair" class="btn btn-primary" value="Go ahead and Submit" onclick="post('/submit',
+      <input type="button" name="zobair" class="btn btn-primary" value="Go ahead and Submit" onclick="post('/submit',
       {'firstname'       : '{{posts['firstname']}}',
        'lastname'        : '{{posts['lastname']}}',
        'role'            : '{{posts['role']}}',
